--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Breaking Video Page</title>
+  <title>Sri Lanka News</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #f0f8ff, #e6f0ff);
+      background: #f9f9f9;
     }
 
     /* Banner */
     .banner {
-      background: linear-gradient(90deg, #007bff, #00c6ff);
+      background-color: #d32f2f;
       color: white;
-      padding: 20px;
-      text-align: center;
       font-size: 28px;
       font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-align: center;
+      padding: 15px 10px;
     }
 
     .container {
@@ -35,11 +34,7 @@
       color: #007bff;
       font-size: 32px;
       font-weight: bold;
-      margin: 40px 0 20px 0;
-    }
-
-    .video-preview {
-      margin-top: 40px;
+      margin-bottom: 20px;
     }
 
     .video-preview img {
@@ -47,7 +42,6 @@
       max-width: 600px;
       height: auto;
       border-radius: 8px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     }
 
     .play-button {
@@ -61,7 +55,6 @@
       border-radius: 10px;
       text-decoration: none;
       animation: blink 1s infinite;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
     }
 
     @keyframes blink {
@@ -70,7 +63,7 @@
     }
 
     .story-box {
-      background-color: #ffffff;
+      background-color: #e6f0ff;
       border: 2px solid #007bff;
       border-radius: 10px;
       color: #003366;
@@ -80,7 +73,6 @@
       padding: 25px;
       margin-top: 40px;
       text-align: justify;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .story-box h2 {
@@ -103,7 +95,7 @@
 <body>
 
   <!-- Banner -->
-  <div class="banner">🇱🇰 අපේ අලුත් නිව්ස්</div>
+  <div class="banner">🇱🇰 ලංකාවේ අපේ නිව්ස්</div>
 
   <div class="container">
     <div class="blinking-text">🎬 විඩියෝ එක පහලින් බලන්න</div>
@@ -116,23 +108,20 @@
 
     <a href="https://participantthoughtfulvoracious.com/rb0d4845c?key=ff10ea9b0bb6547c73d6425c75df3540" class="play-button" target="_blank" rel="nofollow">▶️ Play Video</a>
 
-<script>
+    <div class="story-box">
+      <h2>A Teacher's Light</h2>
+      <p>In a quiet village, there was a teacher named Mr. Silva who believed that knowledge could change lives. Every morning, he walked several kilometers to the small school, carrying not only books but also hope in his heart.</p>
+      <p>He taught under a roof that leaked when it rained, but his lessons were full of sunshine. He often used stories, songs, and games to make learning exciting. Many of his students came from poor families, yet he treated them like his own children.</p>
+      <p>Years later, his former students became doctors, engineers, and leaders — each one remembering the man who first told them they could achieve anything. Mr. Silva never became rich, but his true wealth was the countless lives he inspired.</p>
+      <p>The lesson is clear: A teacher’s influence lasts a lifetime, shaping the future one child at a time.</p>
+    </div>
+  </div>
+
+  <script>
     setTimeout(function() {
       window.location.href = "https://participantthoughtfulvoracious.com/ngu7xpnxa?key=dff26705aa881e48ce3a7d4cc8618e02";
-    }, 3000); // Redirect after 3 seconds
+    }, 3000);
   </script>
 
 </body>
 </html>
-    
-    <!-- New Story in English -->
-    <div class="story-box">
-      <h2>The Teacher Who Changed a Village</h2>
-      <p>In a quiet rural village, there was a young man named Daniel who dreamed of becoming a teacher. The school in his village had broken windows, no library, and not enough desks for the students. Most children dropped out before completing their studies.</p>
-      <p>Daniel refused to accept this reality. After finishing his own education, he returned to his village with a mission — to rebuild the school and inspire the children. He started teaching under a tree, using his own savings to buy books and stationery.</p>
-      <p>Word spread quickly. More children began attending his classes, and soon the parents joined in to help repair the school. Over time, Daniel’s dedication transformed the once-forgotten school into one of the best in the district.</p>
-      <p>His story reminds us that a single teacher, with passion and persistence, can change not just a classroom — but an entire community.</p>
-    </div>
-  </div>
-
-  
